--- a/debian/TODO
+++ b/debian/TODO
@@ -4,7 +4,7 @@ To do for Mopidy's Debian packaging
 - Install data/mopidy.desktop into /usr/share/applications/
 - Add manpages for all commands. Build the manpages with Sphinx
 - Make init script run Mopidy as a daemon
-- Make init script run Mopidy with it's own user
+- Make init script run Mopidy with its own user
 - Add support for reading settings from /etc/mopidy/settings.py
 - Log to /var/log
 - Cache files in /var/cache
