Update author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@
 - David C <dav@dav.com>
 - Christian Johansen <christian@cjohansen.no>
 - Matt Bray <mattjbray@gmail.com>
+- Trygve Aaberge <trygveaa@gmail.com>
