Update author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@
 - Christian Johansen <christian@cjohansen.no>
 - Matt Bray <mattjbray@gmail.com>
 - Trygve Aaberge <trygveaa@gmail.com>
+- Wouter van Wijk <woutervanwijk@gmail.com>
