New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mopidy (0.11.0-0mopidy1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 24 Dec 2012 10:59:52 +0100
+
 mopidy (0.10.0-0mopidy2) unstable; urgency=low
 
   * Add Recommends on python-cherrypy3 and python-ws4py which are used by the
