--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mopidy (0.11.1-0mopidy1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 24 Dec 2012 20:25:45 +0100
+
 mopidy (0.11.0-0mopidy1) unstable; urgency=low
 
   * New upstream release.
