--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,4 @@
 - Matt Bray <mattjbray@gmail.com>
 - Trygve Aaberge <trygveaa@gmail.com>
 - Wouter van Wijk <woutervanwijk@gmail.com>
+- Jeremy B. Merrill <jeremybmerrill@gmail.com>
