--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mopidy (0.12.0-0mopidy1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Stein Magnus Jodal <stein.magnus@jodal.no>  Tue, 12 Mar 2013 21:13:43 +0100
+
 mopidy (0.11.1-0mopidy1) unstable; urgency=low
 
   * New upstream release.
