--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,5 @@
 - Trygve Aaberge <trygveaa@gmail.com>
 - Wouter van Wijk <woutervanwijk@gmail.com>
 - Jeremy B. Merrill <jeremybmerrill@gmail.com>
+- 0xadam <radx@live.com.au>
+- Nick Steel <kingosticks@gmail.com>
