Update changelog and authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@
 - Jeremy B. Merrill <jeremybmerrill@gmail.com>
 - 0xadam <radx@live.com.au>
 - Nick Steel <kingosticks@gmail.com>
+- Zan Dobersek <zandobersek@gmail.com>
