Update changelog and authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,5 +15,6 @@
 - Wouter van Wijk <woutervanwijk@gmail.com>
 - Jeremy B. Merrill <jeremybmerrill@gmail.com>
 - 0xadam <radx@live.com.au>
+- herrernst <herr.ernst@gmail.com>
 - Nick Steel <kingosticks@gmail.com>
 - Zan Dobersek <zandobersek@gmail.com>
