docs: Update changelog and authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@
 - herrernst <herr.ernst@gmail.com>
 - Nick Steel <kingosticks@gmail.com>
 - Zan Dobersek <zandobersek@gmail.com>
+- Thomas Refis <refis.thomas@gmail.com>
