--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@
 - Nick Steel <kingosticks@gmail.com>
 - Zan Dobersek <zandobersek@gmail.com>
 - Thomas Refis <refis.thomas@gmail.com>
+- Janez Troha <janez.troha@gmail.com>
