docs: Update changelog, authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,3 +20,4 @@
 - Zan Dobersek <zandobersek@gmail.com>
 - Thomas Refis <refis.thomas@gmail.com>
 - Janez Troha <janez.troha@gmail.com>
+- Tobias Sauerwein <cgtobi@gmail.com>
