docs: Update changelog, authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@
 - Thomas Refis <refis.thomas@gmail.com>
 - Janez Troha <janez.troha@gmail.com>
 - Tobias Sauerwein <cgtobi@gmail.com>
+- alzeih <alzeih@gmail.com>
