docs: Update changelog, authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -22,3 +22,4 @@
 - Janez Troha <janez.troha@gmail.com>
 - Tobias Sauerwein <cgtobi@gmail.com>
 - alzeih <alzeih@gmail.com>
+- Alexandre Petitjean <alpetitjean@gmail.com>
