--- a/AUTHORS
+++ b/AUTHORS
@@ -21,5 +21,5 @@
 - Thomas Refis <refis.thomas@gmail.com>
 - Janez Troha <janez.troha@gmail.com>
 - Tobias Sauerwein <cgtobi@gmail.com>
-- alzeih <alzeih@gmail.com>
+- Alli Witheford <alzeih@gmail.com>
 - Alexandre Petitjean <alpetitjean@gmail.com>
