--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@
 - Tobias Sauerwein <cgtobi@gmail.com>
 - Alli Witheford <alzeih@gmail.com>
 - Alexandre Petitjean <alpetitjean@gmail.com>
+- Pavol Babincak <scroolik@gmail.com>
