docs: Update authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,3 +24,5 @@
 - Alli Witheford <alzeih@gmail.com>
 - Alexandre Petitjean <alpetitjean@gmail.com>
 - Pavol Babincak <scroolik@gmail.com>
+- Javier Domingo <javierdo1@gmail.com>
+- Lasse Bigum <lasse@bigum.org>
