docs: Update authors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,6 +23,8 @@
 - Tobias Sauerwein <cgtobi@gmail.com>
 - Alli Witheford <alzeih@gmail.com>
 - Alexandre Petitjean <alpetitjean@gmail.com>
+- Terje Larsen <terlar@gmail.com>
 - Pavol Babincak <scroolik@gmail.com>
 - Javier Domingo <javierdo1@gmail.com>
+- Javier Domingo Cansino <javier.domingo@fon.com>
 - Lasse Bigum <lasse@bigum.org>
