docs: Update txomon's mail address

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@
 - Alli Witheford <alzeih@gmail.com>
 - Alexandre Petitjean <alpetitjean@gmail.com>
 - Terje Larsen <terlar@gmail.com>
-- Javier Domingo Cansino <javier.domingo@fon.com>
+- Javier Domingo Cansino <javierdo1@gmail.com>
 - Pavol Babincak <scroolik@gmail.com>
+- Javier Domingo <javierdo1@gmail.com>
 - Lasse Bigum <lasse@bigum.org>
