--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mopidy (0.16.0-0mopidy1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 11:20:51 +0100
+
 mopidy (0.15.0-0mopidy1) unstable; urgency=low
 
   * New upstream release.
