--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ mopidy (0.16.0-0mopidy1) unstable; urgency=low
   * New upstream release.
   * Use https in watch URL.
   * Update copyright year.
+  * Remove dependency on python-spotify, python-pylast, python-dbus, and
+    python-indicate as the extensions requiring them are no longer included in
+    the main Mopidy project.
 
  -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 11:20:51 +0100
 
