debian: Update copyright format URL

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mopidy (0.16.0-0mopidy2) UNRELEASED; urgency=low
+
+  * Update copyright format URL.
+
+ -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 21:47:52 +0100
+
 mopidy (0.16.0-0mopidy1) unstable; urgency=low
 
   * New upstream release.
