debian: Add python-setuptools to Build-Depends

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mopidy (0.16.0-0mopidy2) UNRELEASED; urgency=low
 
   * Update copyright format URL.
+  * Add python-setuptools to Build-Depends.
 
  -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 21:47:52 +0100
 
